# mlde-data

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  environment.lock.yml  environment.txt  environment.yml  pyproject.toml  requirements.txt  samb-extract
.github/workflows/: ci.yml  lint.yml
config/datasets/: bham-256_gcmx-1x_vorticity850_random.yml  bham64-4x_paired-gcm-cpm_12em_pr.yml  bham64_ccpm-4x_12em_mv.yml  bham64_ccpm-4x_12em_vort850_pr.yml  bham64_ccpm-4x_1em_linpr_pr.yml  bham64_ccpm-4x_1em_psl-sphum4th-temp4th-vort4th_pr.yml  bham64_ccpm-4x_1em_temp4th-vort4th_pr.yml  bham64_ccpm-4x_1em_vort4th_pr.yml  bham64_ccpm-4x_1em_vort850_pr.yml  bham64_gcm-4x_12em_psl-sphum4th-temp4th-vort4th_pr.yml  bham64_gcm-4x_12em_sphum4th-temp4th-vort4th_pr.yml  bham64_gcm-4x_12em_temp4th-vort4th_pr.yml  bham64_gcm-4x_1em_psl-sphum4th-temp4th-vort4th_pr.yml  bham64_gcm-4x_1em_psl-temp-vort_pr.yml  bham64_gcm-4x_1em_vort850_pr.yml  bham64_gcm-60km_1em_rawpr_pr.yml  engwales_ccpm-4x-cpmgem_12em_1hr_pr.yml  engwales_ccpm-4x-cpmgem_12em_1hr_pr_preset.yml  engwales_ccpm-4x-cpmgem_12em_1hr_pr_preset_v2.yml  engwales_ccpm-4x-cpmgem_12em_1hr_pr_v2.yml  engwales_ccpm-4x_12em_1981-1990_1hr_pr.yml  engwales_ccpm-4x_12em_1hr_pr_preset.yml  trial_engwales_ccpm-4x_12em_1hr_pr.yml
config/variables/1hr/land-cpm/: pr.yml
config/variables/1hr/land-cpm/targets/: ceda_pr.yml  full-pr.yml  pr.yml
config/variables/day/canari-le-sprint/: pr.yml  psl.yml  vorticity250.yml  vorticity500.yml  vorticity700.yml  vorticity850.yml
config/variables/day/land-cpm/: linpr.yml  pr.yml  spechum.yml  temp.yml  tmean150cm.yml
config/variables/day/land-cpm/predictors/: pr.yml  psl.yml  spechum.yml  temp.yml  vorticity.yml
config/variables/day/land-cpm/targets/: linpr.yml  pr.yml  relhum150cm.yml  tmean150cm.yml
config/variables/day/land-gcm/: linpr.yml  pr.yml  psl.yml  rawpr.yml  spechum.yml  vorticity.yml
config/variables/day/land-gcm/predictors/: pr.yml  psl.yml  spechum.yml  temp.yml  vorticity.yml
config/variables/day/land-gcm/targets/: linpr.yml  pr.yml
moose-etl/: batch-wrapper  etl-variable.py  queue-dep-func
moose-etl/cpm/hum/: extract-spechum
moose-etl/cpm/linpr/: extract-linpr
moose-etl/cpm/pr/: extract-1hrpr  extract-day-60kmpr  extract-day-linpr  extract-day-pr  extract-day-target-pr
moose-etl/cpm/psl/: extract-psl
moose-etl/cpm/temp/: extract-day-target-temp150cm  extract-temp
moose-etl/cpm/tempgrad/: compute-tempgrad
moose-etl/cpm/wind/: extract-vorticity
moose-etl/gcm-target-grid/pr/: transform.py
moose-etl/gcm-target-grid/vorticity850/: transform.py
moose-etl/gcm/hum/: extract-spechum
moose-etl/gcm/pr/: extract-day-linpr  extract-day-pr  extract-day-rawpr
moose-etl/gcm/psl/: extract-psl
moose-etl/gcm/temp/: extract-temp
moose-etl/gcm/tempgrad/: compute-tempgrad
moose-etl/gcm/wind/: extract-vorticity
moose-etl/uk-pr/: master-script
src/mlde_data/: __init__.py  canari_le_sprint.py  canari_le_sprint_variable_adapter.py  ceda_variable_adapter.py  moose.py  moose_extract_variable_adapter.py  moose_variable_adapter.py  options.py
src/mlde_data/actions/: __init__.py  coarsen.py  constrain.py  diff.py  drop_vars.py  regrid.py  remapcon.py  rename.py  resample.py  select_domain.py  shift_lon_break.py  sum.py  vorticity.py
src/mlde_data/config/datasets/: bham-256_gcmx-1x_vorticity850_random.yml  bham64-4x_paired-gcm-cpm_12em_pr.yml  bham64_ccpm-4x_12em_linpr_pr.yml  bham64_ccpm-4x_12em_psl-sphum4th-temp4th-vort4th_pr.yml  bham64_ccpm-4x_12em_psl-sphum4th-temp4th-vort4th_relhum150cm.yml  bham64_ccpm-4x_12em_psl-sphum4th-temp4th-vort4th_tmean150cm.yml  bham64_ccpm-4x_12em_psl-temp4th-vort4th_pr.yml  bham64_ccpm-4x_12em_sphum4th-temp4th-vort4th_pr.yml  bham64_ccpm-4x_12em_temp4th-vort4th_pr.yml  bham64_ccpm-4x_12em_vort4th_pr.yml  bham64_ccpm-4x_1em_linpr_pr.yml  bham64_ccpm-4x_1em_psl-sphum4th-temp4th-vort4th_pr.yml  bham64_ccpm-4x_1em_psl-temp-vort_pr.yml  bham64_ccpm-4x_1em_psl-temp4th-vort4th_pr.yml  bham64_ccpm-4x_1em_sphum4th-temp4th-vort4th_pr.yml  bham64_ccpm-4x_1em_temp4th-vort4th_pr.yml  bham64_ccpm-4x_1em_vort4th_pr.yml  bham64_ccpm-4x_1em_vort850_pr.yml  bham64_ccpm-4x_2em_mv.yml  bham64_ccpm-60km_12em_pr_pr.yml  bham64_ccpm-60km_1em_pr_pr.yml  bham64_gcm-4x_12em_linpr_pr.yml  bham64_gcm-4x_12em_psl-sphum4th-temp4th-vort4th_pr.yml  bham64_gcm-4x_12em_psl-temp4th-vort4th_pr.yml  bham64_gcm-4x_12em_sphum4th-temp4th-vort4th_pr.yml  bham64_gcm-4x_12em_temp4th-vort4th_pr.yml  bham64_gcm-4x_1em_linpr_pr.yml  bham64_gcm-4x_1em_psl-sphum4th-temp4th-vort4th_pr.yml  bham64_gcm-4x_1em_psl-temp-vort_pr.yml  bham64_gcm-4x_1em_psl-temp4th-vort4th_pr.yml  bham64_gcm-4x_1em_sphum4th-temp4th-vort4th_pr.yml  bham64_gcm-4x_1em_temp4th-vort4th_pr.yml  bham64_gcm-4x_1em_vort850_pr.yml  bham64_gcm-60km_12em_rawpr_pr.yml  bham64_gcm-60km_1em_rawpr_pr.yml  bham_60km-4x_12em_linpr_eqvt_random-season.yml  bham_60km-4x_12em_psl-sphum4th-temp4th-vort4th_eqvt_random-season.yml  bham_60km-4x_12em_psl-temp4th-vort4th_eqvt_random-season.yml  bham_60km-4x_1em_psl-sphum4th-temp4th-vort4th_eqvt_random-season.yml  bham_60km-4x_1em_psl-temp4th-vort4th_eqvt_random-season.yml  (+38 more)
src/mlde_data/dataset/: __init__.py  base_split.py  intensity_split.py  preset_split.py  random_season_split.py  random_split.py  season_stratified_intensity_split.py
src/mlde_data/preprocessing/: select_domain.py
src/mlde_data/variable/: __init__.py  validation.py
tests/: example_moose_extract.nc  test_ceda_variable_adapter.py  test_moose.py  test_moose_variable_adapter.py
tests/actions/: test_coarsen.py  test_select_domain.py  test_select_gcm_domain.py  test_shift_lon_break.py  test_sum.py
tests/dataset/: test_dataset.py  test_preset_split.py  test_random_season_split.py  test_random_split.py
tests/fixtures/files/config/dataset/: test_dataset.yml
tests/fixtures/files/preset-dataset-splits/another-dataset/: test.nc  train.nc  val.nc
tests/preprocessing/: test_coarsen.py  test_select_gcm_domain.py  test_shift_lon_break.py  test_sum.py
(+99 files in other folders)
