[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlde_data"
version = "0.3.1"
authors = [
  { name="Henry Addison", email="henry.addison@bristol.ac.uk" },
]
description = "A package for preparing data for  ML downscaling emulator"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "cdo",
  "cftime",
  "codetiming",
  "compliance-checker",
  "scitools-iris",
  "knockknock",
  "metpy",
  "mlde-utils~=0.3.0a3",
  "netcdf4",
  "pint",
  "python-dotenv",
  "xarray[accel]",
  "typer",
]

[dependency-groups]
test = ["pytest"]
dev = [{include-group = "test"}]

[project.urls]
"Homepage" = "https://github.com/henryaddison/mlde-data"
"Bug Tracker" = "https://github.com/henryaddison/mlde-data/issues"

[project.scripts]
    mlde-data = "mlde_data.bin:app"

[tool.pixi.workspace]
channels = ["conda-forge", "nodefaults"]
platforms = ["linux-64"]

[tool.pixi.environments]
default = {features = [], solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}
# Create a custom environment which only has the `lint` feature
lint = {features = ["lint"], no-default-feature = true}

[tool.pixi.tasks]

[tool.pixi.dependencies]
cdo = { version = "2.*"}
mo_pack = { version = "~=0.3.1" }
python = { version = "3.12.*" }

[tool.pixi.pypi-dependencies]
mlde_data = { path = ".", editable = true }
# mlde-utils = { path = "../mlde_utils", editable = true }

[tool.pixi.feature.lint.dependencies]
python = { version = "3.12.*" }
pre-commit = "*"
flake8 = { version = "==6.0.0" }
black = { version = "==25.1.0" }

[tool.pixi.feature.dev.tasks]
test = "pytest"

[tool.pixi.feature.lint.tasks]
lint = "black . && flake8 ."
