[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlde_data"
version = "0.4.0a1"
authors = [
  { name="Henry Addison", email="henry.addison@bristol.ac.uk" },
]
description = "A package for preparing data for  ML downscaling emulator"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "cftime~=1.6.4",
  "codetiming~=1.4.0",
  "compliance-checker~=5.3.0",
  "scitools-iris~=3.12.2",
  "metpy~=1.7.0",
  "mlde-utils~=0.3.0",
  "pint~=0.25",
  "python-dotenv~=1.1",
  "typer~=0.16.0", "esgf-qa>=0.5.0,<0.6", "esgvoc>=2.2.2,<3",
]

[dependency-groups]
test = ["pytest", "pytest-env"]
dev = [{include-group = "test"}]

[project.urls]
"Homepage" = "https://github.com/henryaddison/mlde-data"
"Bug Tracker" = "https://github.com/henryaddison/mlde-data/issues"

[project.scripts]
    mlde-data = "mlde_data.bin:app"

[tool.pixi.workspace]
channels = ["conda-forge", "nodefaults"]
platforms = ["linux-64"]

[tool.pixi.environments]
default = {features = [], solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}
# Create a custom environment which only has the `lint` feature
lint = {features = ["lint"], no-default-feature = true}

[tool.pixi.tasks]

[tool.pixi.dependencies]
bottleneck = { version = "~=1.6.0"}
cdo = { version = "~=2.5"}
cf-xarray = { version = "~=0.10.9" }
dask = { version = "==2025.11.0" }
h5netcdf = ">=1.7.3,<2"
hdf5plugin = ">=6.0.0,<7"
mo_pack = { version = "~=0.3.1" }
netcdf4 = { version = "~=1.7" }
python = { version = "~=3.12.12" }
python-cdo = { version = "~=1.6" }
xarray = { version = "==2025.11.0" }
zarr = ">=3.1.5,<4"
ncdata = ">=0.3.2,<0.4"

[tool.pixi.pypi-dependencies]
mlde_data = { path = ".", editable = true }
# mlde-utils = { path = "../mlde_utils", editable = true }

[tool.pixi.feature.lint.dependencies]
python = { version = "~=3.12.12" }
pre-commit = "~=4.5"
flake8 = { version = "~=7.3.0" }
black = { version = "==25.1.0" }

[tool.pixi.feature.dev.tasks]
test = "pytest"

[tool.pixi.feature.lint.tasks]
lint = "black .; flake8 ."

[tool.black]
target-version = ["py312"]

[tool.pytest_env]
DATA_PATH="/path/to/data"
